# implementation-of-a-linear-hashed-file-structure

./: CMakeLists.txt  README.md
code/: create  dump  gendata  insert  query.c  reln.c  select  stats  test.sh  test1.sh  test2.sh  test22.sh  tuple.c
